--- a/Part4/index.html
+++ b/Part4/index.html
@@ -2,33 +2,43 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Liste des lieux</title>
+  <title>Détails du lieu</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <img src="logo.png" class="logo" alt="Logo" />
+    <img src="logo.png" alt="Logo" class="logo" />
     <nav>
       <a href="index.html">Accueil</a>
-      <a href="login.html" id="login-link" style="display:none;">Connexion</a>
+      <a href="login.html" class="login-button">Connexion</a>
     </nav>
   </header>
 
   <main>
-    <label for="price-filter">Filtrer par prix maximum :</label>
-    <select id="price-filter">
-      <option value="10">10</option>
-      <option value="50">50</option>
-      <option value="100">100</option>
-      <option value="All" selected>Tous</option>
-    </select>
-
-    <section id="places-list">
+    <section id="place-details">
       <article class="place-card" style="margin:20px; padding:10px; border:1px solid #ddd; border-radius:10px;">
         <h2>Nom du lieu</h2>
         <p>Prix par nuit: 100€</p>
         <button class="details-button">View Details</button>
       </article>
+    </section>
+
+    <section id="add-review" style="display:none;">
+      <h3>Ajouter un avis</h3>
+      <form id="review-form">
+        <label for="comment">Commentaire :</label><br/>
+        <textarea id="comment" name="comment" required></textarea><br/>
+        <label for="rating">Note :</label>
+        <select id="rating" name="rating" required>
+          <option value="">Sélectionnez</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select><br/>
+        <button type="submit">Envoyer</button>
+      </form>
     </section>
   </main>
 
@@ -39,9 +49,8 @@
   <script src="scripts.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      checkAuthentication();
+      checkAuthenticationAndLoad();
     });
   </script>
 </body>
 </html>
-
