--- a/Part4/add_review.html
+++ b/Part4/add_review.html
@@ -4,36 +4,40 @@
   <meta charset="UTF-8" />
   <title>Ajouter un avis</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="icon.png" />
 </head>
 <body>
   <header>
     <img src="logo.png" alt="Logo" class="logo" />
-    <a href="login.html" class="login-button">Login</a>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="login.html" class="login-button">Connexion</a>
+    </nav>
   </header>
-  <nav>
-    <a href="index.html">Accueil</a>
-    <a href="login.html">Login</a>
-  </nav>
+
   <main>
-    <form class="add-review form" id="review-form" style="margin:20px; padding:10px; border:1px solid #ddd; border-radius:10px;">
-      <label for="comment">Commentaire :</label>
-      <textarea id="comment" name="comment" required></textarea>
+    <h2>Ajouter un avis</h2>
+    <form id="review-form">
+      <label for="comment">Commentaire :</label><br/>
+      <textarea id="comment" name="comment" required></textarea><br/>
 
       <label for="rating">Note :</label>
       <select id="rating" name="rating" required>
-        <option value="1">1 ★</option>
-        <option value="2">2 ★★</option>
-        <option value="3">3 ★★★</option>
-        <option value="4">4 ★★★★</option>
-        <option value="5">5 ★★★★★</option>
-      </select>
+        <option value="">Sélectionnez</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+      </select><br/>
 
       <button type="submit">Envoyer</button>
     </form>
   </main>
+
   <footer>
-    <p>Tous droits réservés © 2025</p>
+    <p>© Tous droits réservés</p>
   </footer>
+
+  <script src="scripts.js"></script>
 </body>
 </html>
